--- a/src/App.css
+++ b/src/App.css
@@ -5,19 +5,21 @@
 * {
   padding: 0;
   margin: 0;
-  /* font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif; */
 }
 
 nav {
   position: fixed;
   width: 100%;
   display: flex;
-  background-color: #004643;
-  justify-content: space-around;
+  background-color: #252525;
+  justify-content: space-between;
   color: white;
   height: 50px;
   align-items: center;
   z-index: 1;
+  box-shadow: -1px 5px 11px -3px cyan;
+-webkit-box-shadow: -1px 5px 11px -3px cyan;
+-moz-box-shadow: -1px 5px 11px -3px cyan;
 }
 
 nav .iconDensity {
@@ -35,11 +37,12 @@ nav .logo {
   background-color: white;
   width: 30px;
   height: 30px;
+  margin-left: 20px;
   border-radius: 100%;
 }
 
 nav .logo:hover {
-  background-color: #f9bc60;
+  background-color: cyan;
 }
 
 nav ul {
@@ -56,12 +59,12 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-  color: #f9bc60;
+  color: cyan;
 }
 
 .hero {
   height: 100vh;
-  background-color: #abd1c6;
+  background-color: #252525;
   overflow-x: hidden;
 }
 
@@ -70,14 +73,14 @@ nav ul li a:hover {
   height: 100%;
   justify-content: center;
   align-items: center;
-  color: #001e1d;
+  color: white;
   flex-direction: column;
 }
 
 .hero div .line {
   width: 40rem;
-  height: 10px;
-  background-color: #001e1d;
+  height: 5px;
+  background-color: cyan;
 }
 
 .hero div .btnpg1 {
@@ -85,8 +88,7 @@ nav ul li a:hover {
 }
 
 .hero div .btnpg1 Button {
-  border: 3px solid #001e1d;
-  background-color: #004643;
+  border: 3px solid white;
   color: #fffffe;
   margin-right: 20px;
 }
@@ -97,19 +99,20 @@ nav ul li a:hover {
 }
 
 .hero div .btnpg1 Button:hover,  .hero div .btnpg1 Button a:hover{
-  background-color: #f9bc60;
-  color: #001e1d;
+  background-color: cyan;
+  color: black;
+  border: 3px solid black;
 }
 
 .page2 {
   height: 600px;
-  background-color: #004643;
+  background-color: #252525;
 }
 
 .line2 {
   width: 30%;
-  height: 15px;
-  background-color: #fffffe;
+  height: 10px;
+  background-color: cyan;
 }
 
 .my-24{
@@ -118,19 +121,20 @@ nav ul li a:hover {
 }
 
 .p-5 span {
-  color: #fffffe;
+  color: cyan;
 }
 
 .p-5 {
-  color: #abd1c6;
+  color: white;
 }
 
 .page3 {
   height: 500px;
-  background-color: #abd1c6;
+  background-color: #252525;
 }
 
 .page3 .header3 {
+  color: white;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -142,42 +146,26 @@ nav ul li a:hover {
   border-radius: 20px;
 }
 
-.page4 {
-  height: 40%;
-  background-color: #004643;
-}
-
-.page4 .header4 {
-  color: #fffffe;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 4rem;
-}
-
-.page4 .content {
-  background-color: white;
-}
-
 /* Responsive Breakpoint */
 /* Screen Laptop */
 @media screen and (max-width: 1024px) {
   nav .iconDensity {
     cursor: pointer;
     display: flex;
+    margin-right: 20px;
   }
 
   nav .iconDensity:hover {
-    color: #f9bc60;
+    color: cyan;
   }
 
   nav ul {
     position:absolute;
     flex-direction: column;
-    background-color: #004643;
+    background-color: #252525;
     top: 0;
     width: 100%;
-    margin-top: 50px;
+    margin-top: 40px;
     height: 30vh;
     justify-content: space-around;
     z-index: -1;
@@ -185,7 +173,7 @@ nav ul li a:hover {
   }
 
   nav ul.visible {
-    transform: translateY(-110%);
+    transform: translateY(-120%);
   }
 
   /* Page 1 Start */
@@ -225,19 +213,20 @@ nav ul li a:hover {
   nav .iconDensity {
     cursor: pointer;
     display: flex;
+    margin-right: 20px;
   }
 
   nav .iconDensity:hover {
-    color: #f9bc60;
+    color: cyan;
   }
 
   nav ul {
     position:absolute;
     flex-direction: column;
-    background-color: #004643;
+    background-color: #252525;
     top: 0;
     width: 100%;
-    margin-top: 50px;
+    margin-top: 40px;
     height: 30vh;
     justify-content: space-around;
     z-index: -1;
@@ -245,7 +234,7 @@ nav ul li a:hover {
   }
 
   nav ul.visible {
-    transform: translateY(-110%);
+    transform: translateY(-120%);
   }
 
   /* Page 1 Start */
@@ -285,19 +274,20 @@ nav ul li a:hover {
   nav .iconDensity {
     cursor: pointer;
     display: flex;
+    margin-right: 20px;
   }
 
   nav .iconDensity:hover {
-    color: #f9bc60;
+    color: cyan;
   }
 
   nav ul {
     position:absolute;
     flex-direction: column;
-    background-color: #004643;
+    background-color: #252525;
     top: 0;
     width: 100%;
-    margin-top: 50px;
+    margin-top: 40px;
     height: 30vh;
     justify-content: space-around;
     z-index: -1;
@@ -305,7 +295,7 @@ nav ul li a:hover {
   }
 
   nav ul.visible {
-    transform: translateY(-110%);
+    transform: translateY(-120%);
   }
 
   /* Page 1 Start */
@@ -329,7 +319,6 @@ nav ul li a:hover {
   .hero div .btnpg1 a {
     padding: 10px;
   }
-
   /* Page 1 End */
 
   /* Page 2 Start */
@@ -364,4 +353,5 @@ nav ul li a:hover {
   .page3 .header3 {
     margin-top: 0;
   }
+  /* Page 3 End */
 }
