--- a/src/App.css
+++ b/src/App.css
@@ -105,8 +105,13 @@ nav ul li a:hover {
 }
 
 .page2 {
-  height: 600px;
+  height: auto;
   background-color: #252525;
+}
+
+.page2 .paragraf {
+  padding: 20px;
+  text-align: justify;
 }
 
 .line2 {
@@ -144,6 +149,12 @@ nav ul li a:hover {
 .page3 .content {
   background-color: #004643;
   border-radius: 20px;
+}
+
+.page3 .content .flex img {
+  background-size: cover;
+  height: 120px;
+  margin: 15px;
 }
 
 /* Responsive Breakpoint */
@@ -193,7 +204,7 @@ nav ul li a:hover {
   /* Page 2 Start */
   .page2 {
     display: inline-block;
-    height: 1000px;
+    height: auto;
   }
 
   .my-24{
@@ -204,6 +215,11 @@ nav ul li a:hover {
     width: 40%;
     height: 10px;
     background-color: #fffffe;
+  }
+
+  .page2 .paragraf p {
+    width: 100%;
+    text-align: justify;
   }
   /* Page 2 End */
 }
@@ -254,7 +270,7 @@ nav ul li a:hover {
   /* Page 2 Start */
   .page2 {
     display: inline-block;
-    height: 1000px;
+    height: auto;
   }
 
   .my-24{
@@ -266,7 +282,34 @@ nav ul li a:hover {
     height: 10px;
     background-color: #fffffe;
   }
+
+  .page2 .paragraf p {
+    width: 100%;
+    text-align: justify;
+  }
   /* Page 2 End */
+
+  /* Page 3 Start */
+  .page3 {
+    display: flex;
+    flex-direction: column;
+    height: auto;
+  }
+
+  .page3 .content {
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+  }
+
+  .page3 .header3 {
+    margin-top: 0;
+  }
+
+  .page3 .content .flex img {
+    height: 100px;
+  }
+  /* Page 3 End */
 }
 
 /* Screen Mobile */
@@ -324,7 +367,7 @@ nav ul li a:hover {
   /* Page 2 Start */
   .page2 {
     display: inline-block;
-    height: 1600px;
+    height: auto;
   }
 
   .my-24{
@@ -336,12 +379,18 @@ nav ul li a:hover {
     height: 10px;
     background-color: #fffffe;
   }
+
+  .page2 .paragraf p {
+    width: 100%;
+    text-align: justify;
+  }
   /* Page 2 End */
 
   /* page 3 Start */
   .page3 {
     display: flex;
     flex-direction: column;
+    height: auto;
   }
 
   .page3 .content {
