--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,10 @@
   scroll-behavior: smooth;
 }
 
+body {
+  background-color: #252525;
+}
+
 nav {
   position: fixed;
   width: 100%;
@@ -62,6 +66,7 @@ nav ul li a {
 nav ul li a:hover {
   color: cyan;
   text-shadow: 0px 0px 17px cyan;
+  transition: .3s;
 }
 
 .hero {
@@ -89,22 +94,25 @@ nav ul li a:hover {
 }
 
 .hero div .btnpg1 Button {
-  border: 3px solid white;
+  border: 1px solid white;
   color: white;
   margin-right: 20px;
-  padding: 10px;
+  padding: 5px 8px;
   width: 150px;
-  border-radius: 10px;
+  border-radius: 5px;
+  text-transform:unset;
+  font-size: large;
 }
 
 .hero div .btnpg1 Button a {
   text-decoration: none;
+  
 }
 
 .hero div .btnpg1 Button:hover,  .hero div .btnpg1 Button a:hover {
-  background-color: cyan;
-  color: black;
-  border: 3px solid black;
+  color: cyan;
+  border: 1px solid cyan;
+  transition: .3s;
 }
 
 .page2 {
@@ -123,41 +131,60 @@ nav ul li a:hover {
   background-color: cyan;
 }
 
-.my-24{
+.page2-content {
   color: #fffffe;
   font-size: 4rem;
 }
 
-.p-5 span {
+.paragraf-content span {
   color: cyan;
 }
 
-.p-5 {
+.paragraf-content {
   color: white;
 }
 
-.page3 {
-  height: 500px;
-  background-color: #252525;
-}
 
-.page3 .header3 {
-  color: white;
+
+.page4 {
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 4rem;
 }
 
-.page3 .content {
-  background-color: #97979782;
-  border-radius: 20px;
+.page4 .card {
+  box-shadow: 0 0 6px 6px cyan;
+-webkit-box-shadow: 0 0 6px 6px cyan;
+-moz-box-shadow: 0 0 6px 6px cyan;
 }
 
-.page3 .content .flex img {
-  background-size: cover;
-  height: 120px;
-  margin: 15px;
+.page4 h2 {
+  color: cyan;
+}
+
+.page4 form div input, .page4 form div textarea {
+  background-color: #252525;
+}
+
+.page4 form div input, .page4 form div textarea {
+  color: white;
+}
+
+.page4 form div input:focus, .page4 form div textarea:focus {
+  border: 1px solid cyan;
+}
+
+.page4 form div button {
+  border: 1px solid cyan;
+  color: cyan;
+  width: 100%;
+}
+
+.page4 form div button:hover {
+  background-color:cyan;
+  transition: .3s;
+  color: black;
 }
 
 .scroll-bar {
@@ -230,7 +257,7 @@ nav ul li a:hover {
     height: auto;
   }
 
-  .my-24{
+  .page2-content {
     font-size: 3rem;
   }
 
@@ -299,7 +326,7 @@ nav ul li a:hover {
     height: auto;
   }
 
-  .my-24{
+  .page2-content {
     font-size: 3rem;
   }
 
@@ -313,28 +340,6 @@ nav ul li a:hover {
     text-align: justify;
   }
   /* Page 2 End */
-
-  /* Page 3 Start */
-  .page3 {
-    display: flex;
-    flex-direction: column;
-    height: auto;
-  }
-
-  .page3 .content {
-    margin-left: auto;
-    margin-right: auto;
-    width: 80%;
-  }
-
-  .page3 .header3 {
-    margin-top: 0;
-  }
-
-  .page3 .content .flex img {
-    height: 100px;
-  }
-  /* Page 3 End */
 }
 
 /* Screen Mobile */
@@ -410,7 +415,7 @@ nav ul li a:hover {
     height: auto;
   }
 
-  .my-24{
+  .page2-content {
     font-size: 3rem;
   }
 
@@ -424,24 +429,6 @@ nav ul li a:hover {
     text-align: justify;
   }
   /* Page 2 End */
-
-  /* page 3 Start */
-  .page3 {
-    display: flex;
-    flex-direction: column;
-    height: auto;
-  }
-
-  .page3 .content {
-    margin-left: auto;
-    margin-right: auto;
-    width: 80%;
-  }
-
-  .page3 .header3 {
-    margin-top: 0;
-  }
-  /* Page 3 End */
 
   /* Scroll Bar */
   .scroll-bar {
