--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,7 @@ nav .iconDensity {
   display: none;
 }
 
-nav .logo {
+nav .logo, footer div a .logo {
   font-family: 'Times New Roman', Times, serif;
   font-size: 15px;
   font-weight: bold;
@@ -46,7 +46,7 @@ nav .logo {
   border-radius: 100%;
 }
 
-nav .logo:hover {
+nav .logo:hover, footer div a .logo {
   cursor:context-menu;
 }
 
@@ -117,7 +117,6 @@ nav ul li a:hover {
 
 .page2 {
   height: auto;
-  background-color: #252525;
 }
 
 .page2 .paragraf {
@@ -126,7 +125,7 @@ nav ul li a:hover {
 }
 
 .line2 {
-  width: 30%;
+  width: 50%;
   height: 10px;
   background-color: cyan;
 }
@@ -140,14 +139,9 @@ nav ul li a:hover {
   color: cyan;
 }
 
-.paragraf-content {
-  color: white;
-}
-
-
 
 .page4 {
-  height: 100vh;
+  height: 70vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -201,6 +195,10 @@ nav ul li a:hover {
   box-shadow: 0px 0px 5px 0px cyan;
 -webkit-box-shadow: 0px 0px 5px 0px cyan;
 -moz-box-shadow: 0px 0px 5px 0px cyan;
+}
+
+footer div span a:hover {
+  color: cyan;
 }
 
 /* Responsive Breakpoint */
