--- a/src/App.css
+++ b/src/App.css
@@ -65,7 +65,6 @@ nav ul li a {
 
 nav ul li a:hover {
   color: cyan;
-  text-shadow: 0px 0px 17px cyan;
   transition: .3s;
 }
 
@@ -85,19 +84,33 @@ nav ul li a:hover {
 
 .hero div .line {
   width: 40rem;
-  height: 5px;
-  background-color: cyan;
+  height: 2px;
+  background-color: white;
 }
 
 .hero div .btnpg1 {
   width: 40rem;
 }
 
-.hero div .btnpg1 Button {
+.hero div .btnpg1 .more {
+  border: 1px solid white;
+  color: black;
+  background-color: white;
+  margin-right: 20px;
+  padding: 10px;
+  width: 150px;
+  border-radius: 5px;
+  text-transform: unset;
+  font-size: large;
+}
+
+.hero div .btnpg1 .contactMe {
   border: 1px solid white;
   color: white;
+  background: transparent;
+  backdrop-filter: blur(50px);
   margin-right: 20px;
-  padding: 5px 8px;
+  padding: 10px;
   width: 150px;
   border-radius: 5px;
   text-transform:unset;
@@ -106,13 +119,18 @@ nav ul li a:hover {
 
 .hero div .btnpg1 Button a {
   text-decoration: none;
-  
 }
 
-.hero div .btnpg1 Button:hover,  .hero div .btnpg1 Button a:hover {
-  color: cyan;
-  border: 1px solid cyan;
-  transition: .3s;
+.hero div .btnpg1 .more:hover {
+  color: white;
+  border: 1px solid white;
+  background-color: black;
+  background: transparent;
+  backdrop-filter: blur(50px);
+}
+
+.hero div .btnpg1 .contactMe:hover {
+  background-color: #555;
 }
 
 .page2 {
@@ -145,6 +163,8 @@ nav ul li a:hover {
   display: flex;
   justify-content: center;
   align-items: center;
+  background: transparent;
+  backdrop-filter: blur(10px);
 }
 
 .page4 .card {
@@ -245,7 +265,7 @@ footer div span a:hover {
   }
 
   .hero div .btnpg1 {
-    margin-left: 25%;
+    margin-left: 15%;
   }
   /* Page 1 End */
 
@@ -314,7 +334,7 @@ footer div span a:hover {
   }
 
   .hero div .btnpg1 {
-    margin-left: 25%;
+    margin-left: 15%;
   }
   /* Page 1 End */
 
@@ -383,27 +403,17 @@ footer div span a:hover {
   }
 
   .hero div .line {
-    width: 90%;
+    width: 80%;
     margin-top: 10px;
   }
 
   .hero div .btnpg1 {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     width: 100%;
     margin-right: auto;
     margin-left: auto;
-  }
-
-  .hero div .btnpg1 a {
-    padding: 10px;
-    margin-right: auto;
-    margin-left: auto;
-  }
-
-  .hero div .btnpg1 a Button {
-    width: 150px;
   }
   /* Page 1 End */
 
@@ -425,6 +435,9 @@ footer div span a:hover {
   .page2 .paragraf p {
     width: 100%;
     text-align: justify;
+    background: transparent;
+    backdrop-filter: blur(10px);
+    border-radius: 10px;
   }
   /* Page 2 End */
 
